# stonkmaster

./: .gitignore  LICENSE  MANIFEST.in  README.md  default.ini  main.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/: CODE_OF_CONDUCT.md  dependabot.yml
.github/workflows/: build.yml  deploy.yml  deployment.yml  hetzner-cloud-deployment.yml  prod-deployment.yml  publish.yml  python-app.yml
stonkmaster/: main.py
stonkmaster/cogs/: base.py  fundamentals.py  price_chart.py  research.py  settings.py  technicals.py
stonkmaster/commands/: ChartCommand.py  PriceCommand.py  SecCommand.py  ShortsCommand.py  WatchCommand.py  WikiCommand.py  base.py  chart.py  config.py  price.py  sec.py  shorts.py  watch.py  wiki.py
stonkmaster/config/: default.ini
stonkmaster/core/: bot.py  checks.py  config.py  language.py  market.py  setup.py
stonkmaster/tasks/: base.py  update_status.py
stonkmaster/util/: market_utils.py
tests/: assertions.py  conftest.py  mocks.py  utils.py
tests/commands/: test_chart_command.py  test_price_command.py  test_sec_command.py  test_wiki_command.py
